--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   "description": "",
   "dependencies": {
     "compare-versions": "^6.1.1",
-    "got": "^14.4.5"
+    "got": "^14.4.5",
+    "zod": "^3.23.8"
   },
   "devDependencies": {
     "cross-env": "^7.0.3"
